--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "inquirer": "^7.1.0"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.2"
   }
 }
